[package]
name = "ocpp-csms-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-ocpp = "0.2.2"
axum = { version = "0.6.0-rc.2", features = ["ws", "headers"] }
headers = "0.3"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
tower = "0.4.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.66"
pretty_env_logger = "0.4.0"
strum_macros = "0.24.3"

[dev-dependencies]
mockall = "0.11.3"

[[bin]]
name = "csms"
test = false
bench = false
path = "src/main.rs"
